tests/ui/pattern/struct-pattern-with-missing-fields-resolve-error.stderr
error: expected `,`
  --> $DIR/struct-pattern-with-missing-fields-resolve-error.rs:12:31
   |
LL |     if let Website { url, Some(title) } = website {
   |            -------            ^
   |            |
   |            while parsing the fields for this pattern

error[E0425]: cannot find value `title` in this scope
  --> $DIR/struct-pattern-with-missing-fields-resolve-error.rs:19:30
   |
LL |         println!("[{}]({})", title, url);
   |                              ^^^^^ not found in this scope
   |
note: `Website` has a field `title` which could have been included in this pattern, but it wasn't
  --> $DIR/struct-pattern-with-missing-fields-resolve-error.rs:17:12
   |
LL | / struct Website {
LL | |     url: String,
LL | |     title: Option<String> ,
   | |     ----- defined here
LL | | }
   | |_-
...
LL |       if let Website { url, .. } = website {
   |              ^^^^^^^^^^^^^^^^^^^ this pattern doesn't include `title`, which is available in `Website`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0425`.
